[package]
name = "twosets"
version = "0.1.0"
edition = "2024"

# Explicit source paths matching the root-file layout convention.
[[bin]]
name = "twosets"
path = "main.rs"

[lib]
name = "twosets"
path = "lib.rs"

[dependencies]

# Benchmarks require a full native toolchain (MSVC or MinGW).
# Uncomment both blocks to run: cargo bench
# [dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"] }

# [[bench]]
# name = "two_sets_bench"
# harness = false

[profile.release]
opt-level = 3
lto        = true
codegen-units = 1
panic      = "abort"
